:memo: Update Ping interface.
